--- a/.github/workflows/dbt-ci.yml
+++ b/.github/workflows/dbt-ci.yml
@@ -25,15 +25,15 @@ jobs:
       - name: Configure dbt Profile
         run: |
           mkdir -p ~/.dbt
-          cat <<EOF > ~/.dbt/profiles.yml
+          cat << EOF > ~/.dbt/profiles.yml
           my_dbt_profile:
             target: dev
             outputs:
               dev:
                 type: snowflake
-                account: ${{ secrets.SNOWFLAKE_ACCOUNT }}
-                user: ${{ secrets.SNOWFLAKE_USER }}
-                password: ${{ secrets.SNOWFLAKE_PASSWORD }}
+                account: "${{ secrets.SNOWFLAKE_ACCOUNT }}"
+                user: "${{ secrets.SNOWFLAKE_USER }}"
+                password: "${{ secrets.SNOWFLAKE_PASSWORD }}"
                 role: dbt_role
                 warehouse: dbt_wh
                 database: dbt_db
@@ -43,7 +43,6 @@ jobs:
 
       - name: Set DBT_PROFILES_DIR
         run: echo "DBT_PROFILES_DIR=$HOME/.dbt" >> $GITHUB_ENV
-
 
       - name: Run dbt Tests
         run: |
