--- a/.github/workflows/dbt-ci.yml
+++ b/.github/workflows/dbt-ci.yml
@@ -31,9 +31,9 @@ jobs:
             outputs:
               dev:
                 type: snowflake
-                account: "${{ secrets.SNOWFLAKE_ACCOUNT }}"
-                user: "${{ secrets.SNOWFLAKE_USER }}"
-                password: "${{ secrets.SNOWFLAKE_PASSWORD }}"
+                account: cc07163.ap-southeast-1
+                user: ravethi
+                password: Hunkalcoffee@123
                 role: dbt_role
                 warehouse: dbt_wh
                 database: dbt_db
