Initial commit: dbt project setup

--- a/.github/workflows/dbt-ci.yml
+++ b/.github/workflows/dbt-ci.yml
@@ -47,6 +47,7 @@ jobs:
       - name: Run dbt Tests
         run: |
           dbt debug
+          dbt deps
           dbt compile
           dbt test
 
