--- a/.github/workflows/dbt-ci.yml
+++ b/.github/workflows/dbt-ci.yml
@@ -62,5 +62,5 @@ jobs:
         run: |
           git fetch origin  # Ensure we have all remote branches
           git checkout -b prod origin/prod  # Create and track prod branch locally
-          git merge main --no-ff  # Merge changes from main into prod
+          git merge main --no-ff --allow-unrelated-histories # Merge changes from main into prod
           git push origin prod  # Push the updated prod branch
